# Note: This crate must be built using do.sh
# 
# ✅ SOLANA 2.3.0 UPGRADE COMPLETED SUCCESSFULLY!
# - Updated solana-program from 2.1.0 to 2.3.0
# - Updated spl-token from 7.0.0 to 8.0.0  
# - Updated spl-associated-token-account from 6.0.0 to 7.0.0
# - Used PR #4 from Vai3soh/openbook-dex to resolve serum_dex constraint

[package]
name = "raydium_amm"
version = "0.3.1"
description = "Raydium AMM"
authors = ["Raydium Maintainers "]
repository = "https://github.com/raydium-io/raydium-amm"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = ["serum_dex/no-entrypoint"]
program = ["serum_dex/program", "serum_dex/no-entrypoint"]
default = ["program"]
client = ["serum_dex/client"]
devnet = []
testnet = []

[lib]
name = "raydium_amm"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.3.0"  # Successfully upgraded from 2.1.0
spl-token = { version = "=8.0.0", features = ["no-entrypoint"] }  # Latest version
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }  # Latest version
serum_dex = { version = "0.5.10", git = "https://github.com/Vai3soh/openbook-dex.git", branch = "feature/update-solana-program-2.1.0", features = [
    "no-entrypoint",
    "program",
] }
solana-security-txt = "1.1.1"
serde_json = { version = "1.0.56" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3.3" }
base64 = "0.13.0"
arrayref = "0.3.6"
arrform = { git = "https://github.com/raydium-io/arrform" }
num-derive = "0.3"
num-traits = "0.2.12"
bytemuck = { version = "1.4.0" }
safe-transmute = "0.11.0"
thiserror = "1.0.20"
uint = "0.10.0"

[dev-dependencies]
bumpalo = { version = "3.4.0", features = ["collections"] }
proptest = "1.6"
